HMAN-863 Sort orders applied at response creation time i.e. in the GetHearingsResponseMapper. Previous changes reverted.