@@ -37,6 +37,7 @@ import uk.gov.hmcts.reform.hmc.data.ReasonableAdjustmentsEntity;
 import uk.gov.hmcts.reform.hmc.data.RequiredFacilitiesEntity;
 import uk.gov.hmcts.reform.hmc.data.RequiredLocationsEntity;
 import uk.gov.hmcts.reform.hmc.data.UnavailabilityEntity;
+import uk.gov.hmcts.reform.hmc.domain.model.enums.HearingStatus;
 import uk.gov.hmcts.reform.hmc.domain.model.enums.LinkType;
 import uk.gov.hmcts.reform.hmc.domain.model.enums.ListAssistCaseStatus;
 import uk.gov.hmcts.reform.hmc.domain.model.enums.PutHearingStatus;
@@ -85,6 +86,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.IntStream;
 
 import static uk.gov.hmcts.reform.hmc.constants.Constants.CANCELLATION_REQUESTED;
 import static uk.gov.hmcts.reform.hmc.constants.Constants.CREATE_HEARING_REQUEST;
@@ -610,7 +612,7 @@ public class TestingUtil {
         hearingEntity.setId(ID);
         hearingEntity.setIsLinkedFlag(Boolean.TRUE);
         entity.setCaseHearingID(ID);
-        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setStatus(HearingStatus.HEARING_REQUESTED.name());
         entity.setVersionNumber(1);
         hearingEntity.setIsLinkedFlag(true);
         hearingEntity.setLinkedGroupDetails(getLinkedGroupDetails());
@@ -619,7 +621,7 @@ public class TestingUtil {
         entity.setCaseReference("12345");
         entity.setHearingType("Some hearing type");
         entity.getHearing().setHearingResponses(List.of(hearingResponseEntities()));
-        entity.getHearing().getHearingResponses().get(0)
+        entity.getHearing().getHearingResponses().getFirst()
             .setHearingDayDetails(List.of(hearingDayDetailsEntities()));
         entity.setHearingChannels(hearingChannelsEntity());
         return entity;
@@ -672,7 +674,7 @@ public class TestingUtil {
         HearingEntity hearingEntity = new HearingEntity();
         hearingEntity.setId(ID);
         entity1.setCaseHearingID(ID);
-        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setStatus(HearingStatus.HEARING_REQUESTED.name());
         entity1.setHearing(hearingEntity);
         entity1.setHmctsServiceCode("TEST");
         entity1.setCaseReference("12345");
@@ -801,9 +803,9 @@ public class TestingUtil {
     public static HearingEntity getCaseHearingsEntity(PartyType partyType) {
         HearingEntity hearingEntity = new HearingEntity();
         hearingEntity.setId(ID);
-        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setStatus(HearingStatus.HEARING_REQUESTED.name());
         hearingEntity.setHearingResponses(List.of(hearingResponseEntity()));
-        if (partyType.getLabel() == PartyType.IND.getLabel()) {
+        if (partyType.getLabel().equals(PartyType.IND.getLabel())) {
             hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntityWithPartyOrg()));
         } else {
             hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntityWithPartyInd()));
@@ -815,7 +817,7 @@ public class TestingUtil {
     public static HearingEntity getCaseHearingsEntity() {
         HearingEntity hearingEntity = new HearingEntity();
         hearingEntity.setId(ID);
-        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setStatus(HearingStatus.HEARING_REQUESTED.name());
         hearingEntity.setHearingResponses(List.of(hearingResponseEntity()));
         hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntityWithPartyOrg()));
 
@@ -858,7 +860,7 @@ public class TestingUtil {
         caseHearingRequestEntity.setInterpreterBookingRequiredFlag(true);
         caseHearingRequestEntity.setOwningLocationId("locationId");
         caseHearingRequestEntity.setCaseRestrictedFlag(true);
-        caseHearingRequestEntity.setCaseSlaStartDate(LocalDate.of(2000, 01, 01));
+        caseHearingRequestEntity.setCaseSlaStartDate(LocalDate.of(2000, 1, 1));
         caseHearingRequestEntity.setHearingParties(List.of(
             hearingPartyEntitySetReference("reference2"),
             hearingPartyEntitySetReference("reference"),
@@ -873,7 +875,7 @@ public class TestingUtil {
     public static HearingEntity getHearingsEntityForHearingActualsIndividual() {
         HearingEntity hearingEntity = new HearingEntity();
         hearingEntity.setId(ID);
-        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setStatus(HearingStatus.HEARING_REQUESTED.name());
         hearingEntity.setHearingResponses(List.of(hearingResponseEntity()));
         hearingEntity.getCaseHearingRequests().add(caseHearingRequestEntityWithPartyInd());
 
@@ -891,7 +893,7 @@ public class TestingUtil {
         caseHearingRequestEntity.setInterpreterBookingRequiredFlag(true);
         caseHearingRequestEntity.setOwningLocationId("locationId");
         caseHearingRequestEntity.setCaseRestrictedFlag(true);
-        caseHearingRequestEntity.setCaseSlaStartDate(LocalDate.of(2000, 01, 01));
+        caseHearingRequestEntity.setCaseSlaStartDate(LocalDate.of(2000, 1, 1));
         caseHearingRequestEntity.setHearingParties(List.of(hearingPartyEntityInd()));
         caseHearingRequestEntity.setCaseCategories(caseCategoriesEntities());
 
@@ -904,7 +906,7 @@ public class TestingUtil {
         entity.setActualHearingType("hearingType");
         entity.setHearingResultType(HearingResultType.ADJOURNED);
         entity.setHearingResultReasonType("resultReason");
-        entity.setHearingResultDate(LocalDate.of(2000, 01, 01));
+        entity.setHearingResultDate(LocalDate.of(2000, 1, 1));
         entity.setActualHearingDay(List.of(actualHearingDayEntity(partyType)));
         entity.setActualHearingIsFinalFlag(true);
         return entity;
@@ -921,7 +923,7 @@ public class TestingUtil {
 
     public static ActualHearingDayEntity actualHearingDayEntity(PartyType partyType) {
         ActualHearingDayEntity entity = new ActualHearingDayEntity();
-        entity.setHearingDate(LocalDate.of(2000, 01, 01));
+        entity.setHearingDate(LocalDate.of(2000, 1, 1));
         entity.setStartDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
         entity.setEndDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
         entity.setActualHearingDayPauses(List.of(actualHearingDayPausesEntity()));
@@ -1012,12 +1014,75 @@ public class TestingUtil {
         return entity;
     }
 
-    public static HearingDayDetailsEntity hearingDayDetailsEntity(LocalDateTime startDateTime) {
+    public static List<CaseHearingRequestEntity> createMultipleCaseHearingRequestEntities() {
+        List<CaseHearingRequestEntity> entities = new ArrayList<>();
+        IntStream.range(0, 10).forEach(
+            id -> entities.add(createCaseHearingRequestEntity(ID + id)));
+
+        return entities;
+    }
+
+    private static CaseHearingRequestEntity createCaseHearingRequestEntity(Long hearingId) {
+        CaseHearingRequestEntity entity1 = new CaseHearingRequestEntity();
+        HearingEntity hearingEntity = createHearingEntity(hearingId);
+        hearingEntity.setHearingResponses(createHearingResponseEntities());
+        entity1.setCaseHearingID(hearingId);
+        entity1.setHearing(hearingEntity);
+        entity1.setHmctsServiceCode("TEST");
+        entity1.setCaseReference("12345");
+        entity1.setHearingType("Some hearing type");
+        return entity1;
+    }
+
+    private static HearingEntity createHearingEntity(Long hearingId) {
+        HearingEntity hearingEntity = new HearingEntity();
+        hearingEntity.setId(hearingId);
+        hearingEntity.setHearingResponses(createHearingResponseEntities());
+        hearingEntity.setStatus(HearingStatus.HEARING_REQUESTED.name());
+        return hearingEntity;
+    }
+
+    public static List<HearingResponseEntity>  createHearingResponseEntities() {
+        List<HearingResponseEntity> entities = new ArrayList<>();
+        for (int i = 0; i < 20; i++) {
+            entities.add(hearingResponseEntity(1, 1, LocalDateTime.now(), createHearingDayDetailsEntityList()));
+        }
+        return entities;
+    }
+
+    public static List<HearingDayDetailsEntity> createHearingDayDetailsEntityList() {
+        List<HearingDayDetailsEntity> entities = new ArrayList<>();
+        LocalDateTime startDateTime = LocalDateTime.now().plusDays(30);
+        for (int i = 0; i < 20; i++) {
+            entities.add(createHearingDayDetailsEntity(i, startDateTime.minusHours(i * 3)));
+        }
+        return entities;
+    }
+
+    public static HearingDayDetailsEntity createHearingDayDetailsEntity(int id, LocalDateTime startDateTime) {
         HearingDayDetailsEntity entity = new HearingDayDetailsEntity();
         entity.setStartDateTime(startDateTime);
-        entity.setEndDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
-        entity.setVenueId("venue1");
-        entity.setRoomId("room1");
+        entity.setEndDateTime(startDateTime.plusHours(2));
+        entity.setVenueId("venue" + id);
+        entity.setRoomId("room" + id);
+        entity.setHearingAttendeeDetails(createHearingAttendeeDetailsEntityList());
+        return entity;
+    }
+
+    public static List<HearingAttendeeDetailsEntity> createHearingAttendeeDetailsEntityList() {
+        List<HearingAttendeeDetailsEntity> entities = new ArrayList<>();
+        for (int i = 0; i < 20; i++) {
+            entities.add(createHearingAttendeeDetailsEntity(i));
+        }
+        return entities;
+    }
+
+    public static HearingAttendeeDetailsEntity createHearingAttendeeDetailsEntity(int id) {
+        HearingAttendeeDetailsEntity entity = new HearingAttendeeDetailsEntity();
+        entity.setId((long) id);
+        entity.setPartyId("partyid" + id);
+        entity.setPartySubChannelType("subchanneltype" + id);
+        entity.setCreatedDateTime(LocalDateTime.now());
         return entity;
     }
 
